--- a/css/contact/desktop.scss
+++ b/css/contact/desktop.scss
@@ -1,71 +1,86 @@
 $font-stack: Helvetica, sans-serif;
-$font-color: rgb(233, 233, 233);
-$background-color: rgb(22, 22, 22);
+$font-color: rgb(255, 255, 255);
+$font-form: rgb(23,23,23);
+$background-color: rgb(255, 255, 255);
 $logo-color: #ef9629;
 $hover-background: rgb(95, 95, 95);
+$font-size: 0.8em;
+$font-active: 0.9em;
+$font-header: 1em;
 
 @media(min-width: 475px) and (min-height:500px){
     header{
-        .logo-container{
-            padding-top: 5vh;
-            .logo img{
-                width: 75vw;
-                max-width: 500px;
-            }
-            margin-bottom: 5vh;
-        }
-        .head-container{
+        .burger{
             display:none;
         }
-        .line-desktop{
-            border-top: 1px solid $logo-color;
-        }
-        .menu-container{
-            display:flex;
+        .logo-container{
+            width: 35vw;
+            display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            img{
+                width: 80%;
+                padding: 0;
+                padding-left:10%;
+                max-width: 450px;
+            }
+        }
+
+        .menu-container{
+            nav{
+                display:flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+            }
             .nav{
                 position: relative;
-                width: 100vw;
+                width: 65vw;
                 height: 5vh;
-                top: 0;
+                top: 5vh;
+                background-color: transparent;
+                margin-bottom: 10vh;
+                flex-direction: row;
                 transform: translateX(0%);
                 transition-property: none;
-                ul{
-                    width: 75vw;
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
-                    align-items: center;
+            }
+            ul{
+                width: 65vw;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                li{
                     text-align: center;
-                    li{
-                        display: in-line;
-                        text-align: center;
-                        opacity: 1;
-                        padding: 0;
-                        width: 25vw;
-                        min-width: 50px;
-                        a:hover{
-                            font-size: 18px;
-                        }
-                        a{
-                            font-size: 17px;
-                            letter-spacing: 4px;
-                            .active{
-                                font-size:19px;
-                            }
+                    opacity: 1;
+                    padding: 0;
+                    width: 15vw;
+                    min-width: 50px;
+                    a{
+                        font-size: $font-size;
+                        letter-spacing: 4px;
+                        font-weight: bold;
+                        .active{
+                            font-weight: bold;
+                            background-color: transparent;
+                            color: $font-color;
+                            border: 2px solid $logo-color;
                         }
                     }
                 }
             }
         }
     }
+
+
     #contact-container{
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin-top: 5vh;
     }
     fieldset{
         display: flex;
@@ -74,7 +89,7 @@ $hover-background: rgb(95, 95, 95);
         align-items: center;
         width: 50vw;
         min-width: 500px;
-        max-width: 800px;
+        max-width: 700px;
         margin:0;
         .input-field, .dropdown-field, .message-field{
             width: 90%;
@@ -115,11 +130,11 @@ $hover-background: rgb(95, 95, 95);
             width: 0;
             height: 0;
             border: 6px solid transparent;
-            border-color: #fff transparent transparent transparent;
+            border-color: #000 transparent transparent transparent;
         }
     
         .select-selected.select-arrow-active:after{
-            border-color: transparent transparent #fff transparent;
+            border-color: transparent transparent #000 transparent;
             top: 7px;
         }
     
@@ -127,9 +142,9 @@ $hover-background: rgb(95, 95, 95);
             background-color: $background-color;
         }
         .select-items div, .select-selected{
-            color: $font-color;
+            color: $font-form;
             padding: 8px 16px;
-            border: 2px solid $font-color;
+            border: 2px solid $font-form;
             border-radius: 5px;
             width: 100%;
             //border-color: transparent transparent rgba(0,0,0,0.1) transparent;
