--- a/css/contact/mobile.css
+++ b/css/contact/mobile.css
@@ -8,93 +8,50 @@
 body {
   font: 100% Helvetica, sans-serif;
   overflow-x: hidden;
-  background-color: #161616;
+  background-color: white;
   height: 100%;
 }
 
 header {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   width: 100%;
-  background-color: #161616;
+  background: rgba(61, 61, 61, 0.5);
 }
 
 header .logo-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding-top: 11vh;
+  display: block;
   margin-bottom: 15px;
 }
 
-header .logo-container .logo img {
-  width: 90vw;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+header .logo-container img {
+  width: 60%;
+  padding: 0.6em;
 }
 
-header .head-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+header .burger div {
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: #161616;
+  margin: 5px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+header .burger {
+  padding: 1em;
+  padding-right: .5em;
   position: fixed;
-  z-index: 98;
-  width: 100vw;
-  height: 10vh;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: right;
-      -ms-flex-align: right;
-          align-items: right;
-  background-color: #161616;
-  opacity: 0.95;
-}
-
-header .head-container #hamburger-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0;
-  padding: 0;
-  background-color: #161616;
-  -ms-flex-item-align: center;
-      align-self: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  height: 10vh;
-}
-
-header .head-container #hamburger-menu img {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-item-align: center;
-      align-self: center;
-  width: auto;
-  z-index: 99;
-  height: 8vh;
-  min-height: 36px;
-  max-height: 40px;
-  padding-right: 5vw;
-  padding-top: 1vh;
-  padding-bottom: 1vh;
-  opacity: 1;
+  z-index: 110;
 }
 
 header .menu-container {
@@ -105,9 +62,19 @@ header .menu-container {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+}
+
+header .menu-container .burger-logo-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 header .menu-container .nav {
@@ -117,16 +84,19 @@ header .menu-container .nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 90vh;
+  height: 100vh;
   width: 75vw;
-  top: 10vh;
+  top: 0;
+  right: 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-color: #161616;
-  opacity: 0.95;
+  opacity: 0.8;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   -webkit-transition: -webkit-transform 0.5s ease-in;
@@ -135,26 +105,25 @@ header .menu-container .nav {
   transition: transform 0.5s ease-in, -webkit-transform 0.5s ease-in;
 }
 
-header .menu-container .nav ul li {
+header .menu-container ul li {
   opacity: 0;
   list-style: none;
   padding: 10vh 0 10vh 0;
 }
 
-header .menu-container .nav ul li a:hover {
-  font-size: 15px;
+header .menu-container ul li a:hover {
   font-weight: bold;
+  font-size: 0.9em;
 }
 
-header .menu-container .nav ul a {
+header .menu-container ul a {
   color: #e9e9e9;
   text-decoration: none;
-  letter-spacing: 3px;
-  font-size: 14px;
+  letter-spacing: 2px;
+  font-size: 0.8em;
 }
 
-header .menu-container .nav ul a .active {
-  font-size: 16px;
+header .menu-container ul a .active {
   font-weight: bold;
   text-decoration: underline;
   color: #ef9629;
@@ -192,12 +161,57 @@ header .menu-container .nav-active {
   }
 }
 
+header .toggle .line1 {
+  -webkit-transform: rotate(-45deg) translate(-5px, 6px);
+          transform: rotate(-45deg) translate(-5px, 6px);
+  background-color: white;
+}
+
+header .toggle .line2 {
+  opacity: 0;
+}
+
+header .toggle .line3 {
+  -webkit-transform: rotate(45deg) translate(-5px, -6px);
+          transform: rotate(45deg) translate(-5px, -6px);
+  background-color: white;
+}
+
+.contact-icons-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.contact-icons-container .contact-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contact-icons-container img {
+  width: auto;
+  min-height: 40px;
+  max-height: 45px;
+}
+
 legend {
   text-align: center;
 }
 
 legend h2 {
-  color: #e9e9e9;
+  color: #161616;
   font-size: 25px;
   font-weight: 500;
   letter-spacing: 3px;
@@ -205,7 +219,7 @@ legend h2 {
 
 fieldset {
   width: 90vw;
-  margin: 5vw 0 0 5vw;
+  margin: 5vw 0 5vh 5vw;
 }
 
 fieldset .input-field, fieldset .dropdown-field, fieldset .message-field {
@@ -214,9 +228,9 @@ fieldset .input-field, fieldset .dropdown-field, fieldset .message-field {
 }
 
 fieldset label {
-  color: #e9e9e9;
+  color: #161616;
   margin-top: 2vh;
-  font-size: 25px;
+  font-size: 1em;
 }
 
 fieldset input, fieldset .select-container {
@@ -225,11 +239,11 @@ fieldset input, fieldset .select-container {
   min-height: 30px;
   max-height: 40px;
   height: 10vh;
-  border: 2px solid #e9e9e9;
+  border: 2px solid #161616;
   background-color: transparent;
-  color: #e9e9e9;
+  color: #161616;
   padding: 0 0 0 0.75rem;
-  font-size: 20px;
+  font-size: 0.8em;
 }
 
 fieldset .select-container {
@@ -241,7 +255,7 @@ fieldset .select-container {
           align-items: center;
   padding: 0 0 0 0;
   position: relative;
-  border: 2px solid #e9e9e9;
+  border: 2px solid #161616;
 }
 
 fieldset .select-container select {
@@ -250,13 +264,13 @@ fieldset .select-container select {
   max-height: 40px;
   height: 10vh;
   background-color: transparent;
-  color: #e9e9e9;
+  color: #161616;
   padding: 0 0 0 0.75rem;
   position: relative;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  font-size: 20px;
+  font-size: 0.8em;
 }
 
 fieldset .select-container img {
@@ -269,12 +283,12 @@ fieldset textarea {
   height: 20vh;
   min-height: 150px;
   max-height: 300px;
-  color: #e9e9e9;
+  color: #161616;
   background-color: transparent;
   padding: 0.75rem 0 0 1rem;
-  border: 2px solid #e9e9e9;
+  border: 2px solid #161616;
   border-radius: 5px;
-  font-size: 20px;
+  font-size: 0.8em;
 }
 
 fieldset .message-field {
@@ -307,14 +321,14 @@ fieldset input:focus, fieldset select:focus, fieldset textarea:focus {
 
 @keyframes autofill {
   to {
-    color: #e9e9e9;
+    color: #161616;
     background: transparent;
   }
 }
 
 @-webkit-keyframes autofill {
   to {
-    color: #e9e9e9;
+    color: #161616;
     background-color: transparent;
   }
 }
@@ -344,7 +358,7 @@ input:-webkit-autofill {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 5vh;
+  margin: 5vh 0 5vh 0;
 }
 
 .center-button .button-container {
@@ -365,19 +379,18 @@ input:-webkit-autofill {
 }
 
 .center-button .button-container button {
-  color: #e9e9e9;
+  color: #161616;
   font-size: 25px;
   letter-spacing: 5px;
-  background-color: #161616;
-  border: 2px solid #e9e9e9;
-  width: 200px;
+  background-color: white;
+  border: 2px solid #161616;
+  width: 160px;
   height: 38px;
   border-radius: 30px;
 }
 
 .line {
-  border-top: 1px solid #ef9629;
-  margin-top: 5vh;
+  border-top: 2px solid #ef9629;
 }
 
 footer {
@@ -394,18 +407,19 @@ footer {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  background: rgba(23, 23, 23, 0.2);
 }
 
 footer #contact-info {
   padding: 4vh 0 2vh 0;
-  color: #e9e9e9;
+  color: #161616;
   text-align: center;
-  font-size: 15px;
+  font-size: 0.8em;
 }
 
 footer #contact-info a {
   text-decoration: none;
-  color: #e9e9e9;
+  color: #161616;
 }
 
 footer #social-media {
@@ -426,9 +440,9 @@ footer #social-media #social-icons a {
 }
 
 footer #social-media #social-icons img {
-  background-color: #e9e9e9;
+  background-color: #ef9629;
   border-radius: 50%;
-  border: 2px solid #e9e9e9;
+  border: 1px solid #ef9629;
   width: auto;
   height: 7vh;
   min-height: 40px;
@@ -437,7 +451,7 @@ footer #social-media #social-icons img {
 }
 
 footer #social-media #social-icons img:hover {
-  background-color: white;
-  border-width: 3px;
+  border-width: 2px;
+  border-color: black;
 }
 /*# sourceMappingURL=mobile.css.map */
