--- a/css/home/desktop.css
+++ b/css/home/desktop.css
@@ -20,8 +20,8 @@
   }
   header .logo-container img {
     width: 80%;
-    padding: 0;
-    padding-left: 10%;
+    padding: 15px 0 0 15px;
+    max-width: 450px;
   }
   header .menu-container nav {
     display: -webkit-box;
