--- a/css/contact/mobile.css
+++ b/css/contact/mobile.css
@@ -177,17 +177,28 @@ header .toggle .line3 {
   background-color: white;
 }
 
-.contact-icons-container {
+.center-icons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.center-icons .contact-icons-container {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin: 3vh 0 5vh 0;
 }
 
-.contact-icons-container .contact-icon {
+.center-icons .contact-icons-container .contact-icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -198,9 +209,19 @@ header .toggle .line3 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 2vh 5vw 0 5vw;
 }
 
-.contact-icons-container img {
+.center-icons .contact-icons-container .contact-icon p {
+  margin-left: 5vw;
+}
+
+.center-icons .contact-icons-container .contact-icon p a {
+  text-decoration: none;
+  color: #161616;
+}
+
+.center-icons .contact-icons-container img {
   width: auto;
   min-height: 40px;
   max-height: 45px;
@@ -219,7 +240,7 @@ legend h2 {
 
 fieldset {
   width: 90vw;
-  margin: 5vw 0 5vh 5vw;
+  margin: 0 0 5vh 5vw;
 }
 
 fieldset .input-field, fieldset .dropdown-field, fieldset .message-field {
@@ -366,10 +387,10 @@ input:-webkit-autofill {
   display: -ms-flexbox;
   display: flex;
   text-align: center;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -378,15 +399,22 @@ input:-webkit-autofill {
           align-items: center;
 }
 
-.center-button .button-container button {
+#submit-btn {
+  margin-top: 5vh;
   color: #161616;
-  font-size: 25px;
-  letter-spacing: 5px;
-  background-color: white;
-  border: 2px solid #161616;
+  font-size: 1em;
+  letter-spacing: 4px;
+  border: 2px solid #ffa640;
   width: 160px;
   height: 38px;
   border-radius: 30px;
+  cursor: not-allowed;
+}
+
+#submit-btn:hover:enabled {
+  background-color: #ffa640;
+  border-color: #161616;
+  color: #e9e9e9;
 }
 
 .line {
