--- a/css/services/desktop.scss
+++ b/css/services/desktop.scss
@@ -21,8 +21,8 @@ $font-header: 1em;
             align-items: center;
             img{
                 width: 80%;
-                padding: 0;
-                padding-left:10%;
+                padding: 15px 0 0 15px;
+                max-width: 450px;
             }
         }
 
