--- a/css/contact/mobile.css
+++ b/css/contact/mobile.css
@@ -417,6 +417,16 @@ input:-webkit-autofill {
   color: #e9e9e9;
 }
 
+#form-response {
+  font-size: 1em;
+  display: none;
+  letter-spacing: 1px;
+  color: black;
+  margin: 5vh auto 5vh auto;
+  text-align: center;
+  width: auto;
+}
+
 .line {
   border-top: 2px solid #ef9629;
 }
